--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_exit_app: ^1.1.2
+  provider: ^6.0.5
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
