--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_exit_app: ^1.1.2
-  provider: ^6.0.5
-  http: ^0.13.5
+  provider: ^4.0.1
+  http: ^0.12.0+2
 
 dev_dependencies:
   flutter_test:
