--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,7 @@ flutter:
 
   # To add assets to your package, add an assets section, like this:
   assets:
-    - assets/burg.png
-    - assets/burger.png
-    - assets/menu.png
-    - assets/pizza.png
-    - assets/roll.png
-    - assets/soup.png
+    - assets/images/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
